// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefundOrderModal should render Refund Order - ERROR popup 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-3-desc"
    aria-labelledby="modal-3-title"
    aria-modal="true"
    class="modal default open"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent default"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-3-title"
            >
              Refund Order #123
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="formBody"
        >
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund
            </p>
            <span
              class="customAmountRefundInputFieldWrapper wrapper group horizontal"
            >
              <span
                class="prefix"
              >
                €
              </span>
              <input
                class="input isAlignedRight"
                max="Infinity"
                min="0"
                required=""
                step="0.01"
                type="number"
                value="0.00"
              />
              <span
                class="suffix"
              >
                 
              </span>
            </span>
            <p
              class="caption"
            />
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund method
            </p>
            <p
              class=""
            >
              Select an amount to refund.
            </p>
          </div>
          <div
            class="modalSectionSmall"
          >
            <p
              class="modalSectionHeader"
            >
              Other
            </p>
            <label
              class="label label"
              for="refundReason"
            >
              Reason for refund
            </label>
            <div
              class="textAreaWrapper"
            >
              <textarea
                aria-describedby="refundReason-caption"
                class="textarea"
                id="refundReason"
                maxlength="1000"
                name="refundReason"
                rows="1"
                style="height: 2px;"
              />
              <div
                class="caption"
                id="refundReason-caption"
              >
                Maximum length is 1000 characters.
              </div>
            </div>
            <label
              class="label label smallSpacingMarginTop"
              for="newOrderStatus"
            >
              New status
            </label>
            <div
              class="wrapper"
              role="listbox"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input isGreyed"
                >
                  Select order status
                </div>
                <i
                  class="affix suffix toggle material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <p
              class="caption"
            >
              If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
            </p>
          </div>
        </div>
        <div
          class="wrapper modalFooterWrapper"
        >
          <button
            class="wrapper fill secondary medium"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="wrapper fill primary medium isDisabled"
            disabled=""
            tabindex="0"
            type="button"
          >
            Refund €0.00
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-1"
  />
  <div
    aria-describedby="modal-5-desc"
    aria-labelledby="modal-5-title"
    aria-modal="true"
    class="modal default open"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent default"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-5-title"
            >
              Error
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper"
          id="modal-5-desc"
        >
          An unexpected error occurred. Please try again later.
        </div>
        <div
          class="wrapper wrapper"
        >
          <div
            class="actions"
          >
            <div
              class="childWrapper"
            >
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Got it
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RefundOrderModal should render Refund Order - OK 1`] = `
<body>
  <div>
    
  </div>
  <div
    aria-describedby="modal-1-desc"
    aria-labelledby="modal-1-title"
    aria-modal="true"
    class="modal default open"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent default"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-1-title"
            >
              Refund Order #123
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="formBody"
        >
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund
            </p>
            <span
              class="customAmountRefundInputFieldWrapper wrapper group horizontal"
            >
              <span
                class="prefix"
              >
                €
              </span>
              <input
                class="input isAlignedRight"
                max="Infinity"
                min="0"
                required=""
                step="0.01"
                type="number"
                value="0.00"
              />
              <span
                class="suffix"
              >
                 
              </span>
            </span>
            <p
              class="caption"
            >
              Available for refund: €1,230,000.89
            </p>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund method
            </p>
            <p
              class=""
            >
              Select an amount to refund.
            </p>
          </div>
          <div
            class="modalSectionSmall"
          >
            <p
              class="modalSectionHeader"
            >
              Other
            </p>
            <label
              class="label label"
              for="refundReason"
            >
              Reason for refund
            </label>
            <div
              class="textAreaWrapper"
            >
              <textarea
                aria-describedby="refundReason-caption"
                class="textarea"
                id="refundReason"
                maxlength="1000"
                name="refundReason"
                rows="1"
                style="height: 2px;"
              />
              <div
                class="caption"
                id="refundReason-caption"
              >
                Maximum length is 1000 characters.
              </div>
            </div>
            <label
              class="label label smallSpacingMarginTop"
              for="newOrderStatus"
            >
              New status
            </label>
            <div
              class="wrapper"
              role="listbox"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input isGreyed"
                >
                  Select order status
                </div>
                <i
                  class="affix suffix toggle material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <p
              class="caption"
            >
              If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
            </p>
          </div>
        </div>
        <div
          class="wrapper modalFooterWrapper"
        >
          <button
            class="wrapper fill secondary medium"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="wrapper fill primary medium isDisabled"
            disabled=""
            tabindex="0"
            type="button"
          >
            Refund €0.00
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-0"
  />
</body>
`;

exports[`RefundOrderModal should render Refund Order - Too Many Requests ERROR popup 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-6-desc"
    aria-labelledby="modal-6-title"
    aria-modal="true"
    class="modal default open"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent default"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-6-title"
            >
              Refund Order #123
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="formBody"
        >
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund
            </p>
            <span
              class="customAmountRefundInputFieldWrapper wrapper group horizontal"
            >
              <span
                class="prefix"
              >
                €
              </span>
              <input
                class="input isAlignedRight"
                max="Infinity"
                min="0"
                required=""
                step="0.01"
                type="number"
                value="0.00"
              />
              <span
                class="suffix"
              >
                 
              </span>
            </span>
            <p
              class="caption"
            />
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund method
            </p>
            <p
              class=""
            >
              Select an amount to refund.
            </p>
          </div>
          <div
            class="modalSectionSmall"
          >
            <p
              class="modalSectionHeader"
            >
              Other
            </p>
            <label
              class="label label"
              for="refundReason"
            >
              Reason for refund
            </label>
            <div
              class="textAreaWrapper"
            >
              <textarea
                aria-describedby="refundReason-caption"
                class="textarea"
                id="refundReason"
                maxlength="1000"
                name="refundReason"
                rows="1"
                style="height: 2px;"
              />
              <div
                class="caption"
                id="refundReason-caption"
              >
                Maximum length is 1000 characters.
              </div>
            </div>
            <label
              class="label label smallSpacingMarginTop"
              for="newOrderStatus"
            >
              New status
            </label>
            <div
              class="wrapper"
              role="listbox"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input isGreyed"
                >
                  Select order status
                </div>
                <i
                  class="affix suffix toggle material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <p
              class="caption"
            >
              If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
            </p>
          </div>
        </div>
        <div
          class="wrapper modalFooterWrapper"
        >
          <button
            class="wrapper fill secondary medium"
            tabindex="0"
            type="button"
          >
            Cancel
          </button>
          <button
            class="wrapper fill primary medium isDisabled"
            disabled=""
            tabindex="0"
            type="button"
          >
            Refund €0.00
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="floating-ui-2"
  />
  <div
    aria-describedby="modal-8-desc"
    aria-labelledby="modal-8-title"
    aria-modal="true"
    class="modal default open"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent default"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-8-title"
            >
              Error
            </div>
            <div
              class="subtitle"
            />
          </div>
          <i
            class="material-icons icon"
          >
            close
          </i>
        </div>
        <div
          class="wrapper"
          id="modal-8-desc"
        >
          The operation cannot be completed. You have too many queued requests at the moment. Please wait a moment and try again.
        </div>
        <div
          class="wrapper wrapper"
        >
          <div
            class="actions"
          >
            <div
              class="childWrapper"
            >
              <button
                class="wrapper fill primary medium"
                type="button"
              >
                Got it
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
